sfx2/source/control/statcach.cxx
@@ -127,6 +127,8 @@ void SAL_CALL  BindDispatch_Impl::statusChanged( const css::frame::FeatureStateE
                     pItem->PutValue( aAny, 0 );
                 }
                 else
+                    // tdf#162666 nId should not be zero. This will now create
+                    // a SAL_INFO in SfxVoidItem::SfxVoidItem
                     pItem.reset( new SfxVoidItem( nId ) );
             }
             pArg = pItem.get();
@@ -203,8 +205,13 @@ SfxStateCache::SfxStateCache( sal_uInt16 nFuncId ):
 SfxStateCache::~SfxStateCache()
 {
     DBG_ASSERT( pController == nullptr && pInternalController == nullptr, "there are still Controllers registered" );
-    if ( !IsInvalidItem(pLastItem) )
+
+    if ( !IsInvalidItem(pLastItem) && !IsDisabledItem(pLastItem) )
+    {
+        // tdf#162666 only delete if it *was* cloned
         delete pLastItem;
+    }
+
     if ( mxDispatch.is() )
         mxDispatch->Release();
 }
@@ -424,15 +431,40 @@ void SfxStateCache::SetState_Impl
             static_cast<SfxDispatchController_Impl *>(pInternalController)->StateChanged( nId, eState, pState, &aSlotServ );
 
         // Remember new value
-        if ( !IsInvalidItem(pLastItem) )
+        if (!IsInvalidItem(pLastItem) && !IsDisabledItem(pLastItem))
         {
+            // tdf#162666 only delete if it *was* cloned
             delete pLastItem;
-            pLastItem = nullptr;
         }
-        if ( pState && !IsInvalidItem(pState) )
-            pLastItem = pState->Clone();
-        else
-            pLastItem = nullptr;
+
+        // always reset to nullptr
+        pLastItem = nullptr;
+
+        if ( nullptr != pState)
+        {
+            if (IsInvalidItem(pState))
+            {
+                // tdf#162666 if invalid, use INVALID_POOL_ITEM
+                pLastItem = INVALID_POOL_ITEM;
+            }
+            else if (IsDisabledItem(pState))
+            {
+                // tdf#162666 if disabled, use DISABLED_POOL_ITEM
+                pLastItem = DISABLED_POOL_ITEM;
+            }
+            else
+            {
+                // tdf#162666 in all other cases, clone the Item. Note that
+                // due to not using a Pool here it is not possible to use a
+                // ItemSet or a ItemHolder, those would automatically handle
+                // these cases correctly. In this cache, this currently needs
+                // to be done handish. Also note that this may break again
+                // when changes in the Item/ItemSet/ItemHolder mechanism may
+                // be done
+                pLastItem = pState->Clone();
+            }
+        }
+
         eLastState = eState;
         bItemDirty = false;
     }
